# ChangeLog for app-vim/slimv
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/slimv/ChangeLog,v 1.21 2013/04/07 10:24:40 radhermit Exp $

*slimv-0.9.10 (07 Apr 2013)

  07 Apr 2013; Tim Harder <radhermit@gentoo.org> +slimv-0.9.10.ebuild:
  Version bump.

*slimv-0.9.9 (03 Dec 2012)

  03 Dec 2012; Tim Harder <radhermit@gentoo.org> +slimv-0.9.9.ebuild:
  Version bump.

  02 Sep 2012; Tim Harder <radhermit@gentoo.org> -slimv-0.9.2.ebuild:
  Remove old.

*slimv-0.9.8 (02 Sep 2012)

  02 Sep 2012; Tim Harder <radhermit@gentoo.org> +slimv-0.9.8.ebuild:
  Version bump.

  03 Aug 2012; Tim Harder <radhermit@gentoo.org> -slimv-0.9.1.ebuild:
  Remove old.

*slimv-0.9.7 (03 Aug 2012)

  03 Aug 2012; Tim Harder <radhermit@gentoo.org> +slimv-0.9.7.ebuild:
  Version bump (bug #423631).

  13 Nov 2011; Tim Harder <radhermit@gentoo.org> -slimv-0.8.6.ebuild,
  -slimv-0.9.0.ebuild:
  Remove old.

  09 Nov 2011; Tim Harder <radhermit@gentoo.org> slimv-0.9.2.ebuild:
  Fix header.

*slimv-0.9.2 (07 Nov 2011)

  07 Nov 2011; Tim Harder <radhermit@gentoo.org> +slimv-0.9.2.ebuild:
  Version bump.

*slimv-0.9.1 (14 Oct 2011)

  14 Oct 2011; Tim Harder <radhermit@gentoo.org> +slimv-0.9.1.ebuild:
  Version bump.

  10 Oct 2011; Tim Harder <radhermit@gentoo.org> slimv-0.8.6.ebuild,
  slimv-0.9.0.ebuild:
  Die when trying to remove nonexistent files.

  10 Oct 2011; Tim Harder <radhermit@gentoo.org> -slimv-0.8.4.ebuild,
  -slimv-0.8.5.ebuild:
  Remove old.

*slimv-0.9.0 (10 Oct 2011)

  10 Oct 2011; Tim Harder <radhermit@gentoo.org> +slimv-0.9.0.ebuild:
  Version bump.

*slimv-0.8.6 (05 Sep 2011)

  05 Sep 2011; Tim Harder <radhermit@gentoo.org> +slimv-0.8.6.ebuild:
  Version bump.

*slimv-0.8.5 (07 Aug 2011)

  07 Aug 2011; Tim Harder <radhermit@gentoo.org> -slimv-0.8.2.ebuild,
  -slimv-0.8.3.ebuild, +slimv-0.8.5.ebuild:
  Version bump and remove old.

*slimv-0.8.4 (25 Jun 2011)
