@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST slimv-0.9.10.tar.bz2 624320 SHA256 893d5f984681859f38a24f2e8f86cba2a57af7731602b04163257455c9643f97 SHA512 034bb203145021fd323a3ff070a19c9fb2daaedab2edf416f16bbc96f9a3e71d459bf49aada35997f0a3cb7206024724029eba9702e892b2ae9f43ef338a5dd0 WHIRLPOOL 0499d854f5d63b833c7a9f995fa643276ab96d7f846211bb35cd4a24dc4a2232c0099f413f9ee0e9dbc817b955af29a178569eaf82908b653042ee93f3572690
+DIST slimv-0.9.11.tar.bz2 614946 SHA256 97213b2e31c8a5aaf73e3852b27bc08f7556513dfc854bc617628e6bd1d1f579 SHA512 883339af9dcc4a23cd5c142dc849dc064e8785ddd509163c0e31ad81418c5231506209d5b1b089d8dc4b4161ebf49ff65b8898c258522993ee72b5e630106726 WHIRLPOOL 28dd1574ffe974a6e0f6ea1803f1a49126dd99b406083ef437fa3b206844ad87c15dbfe2593acf787875873812642ddd81d27ab2d3f3fe5efe4430b016f8bfca
 DIST slimv-0.9.7.tar.bz2 619110 SHA256 96f86c4caae9e5fce18b2dcebc7f0cdd3c9e674a5a3171ecce12cfc1a4b9a8d9 SHA512 f413077656863ad422920baf4cedfec380676ba302aa83effdaf3318465f5f1c8814ae125bef9ff9b2b74e77761e59979217edeccd0bde54fd6ab10e0d221112 WHIRLPOOL c2437470d1319f6f594a8176cf8696d98a6b76ee7205a40671e19878a81621c3877059d1b363440fd7e48c8d2f109f11be17a78ab8f3008fc12c4ac7aa0493b1
 DIST slimv-0.9.8.tar.bz2 620888 SHA256 6c210a4ec7b35209d6d7affe7fca4d357acd25cf2715cfbe3e7bb0977984798a SHA512 fe8d5ffcdc445017a376a517fce36ad3b3618ebfe115d58ac644da513247d359e8b9d6f3fd04feb2152a40a486121da78b1b75c92b2307a9b493af65af6c5374 WHIRLPOOL 5c059fc056ab5b30e5551ada0e7f7fb42c0a2b0988f7830bab71752e67673831d3e350bb0e635d31f3e3265a30ae118728ebcfc59b6824830642bf68ee3de89f
 DIST slimv-0.9.9.tar.bz2 613400 SHA256 393d3640878cf268be1bde6cb0602ae12fecda94c26b0cbdf40cba89fb7c8804 SHA512 426ba4d6a914a1d60a0b01025712b1ac581223471855a8dc8c2d106755cca3ac02ce18d03edddc8fb7151fc7f25422e0de25e22b1e77cacae15aba01d5be61a1 WHIRLPOOL 03539428a8ad6a5bffee425a6688b52930a1593e3ca1628b89a4f9f2c2362fe2d620f63a7dc83a4b9493af80279aa1bcc80cfb5b33efc61b5c93d0f40d9b4ad4
 EBUILD slimv-0.9.10.ebuild 782 SHA256 4c7036d2cbf417f76be90a7f5d5f650d6edd79dfeedb398b79abe36ba8b0a123 SHA512 372ea7a4be3b31d00bf2c3d6513ae793e7b6757c386e226ffe8deec810285cf8751cf5ba46d81eec2f26c6ba6f9e3b5d9d9819527a890c9282f52251005b94dd WHIRLPOOL 2f3a1640ee9d65dc5f60b1bc5933c8fe2f603d10838f222c0f000fd797c5658ff2db0b3f6ce6b1c10f333d27637c266a9de1a097719053bbed9deb74845a1e3e
+EBUILD slimv-0.9.11.ebuild 868 SHA256 0bd28b16b75ed71fff413acc685731e9afca91a4c8d7e16154e906c9ee9bd484 SHA512 bbc983b10dc350638a1ab3b2a0ab89d2763ec9bb2f529b78627eaba5b74b5a5ce285761f4f63dac040c4b0fb428d1e3924d0c8d1f66e641918c3fa78856738ea WHIRLPOOL 6389145f8d032146991c1a0d801fca2881b64dccdabcffa956c20167a60ff32d92033edea3b327ce8ccf9ace8d3f456fbbe9d3152ca48f0d59af68a8dff1f590
 EBUILD slimv-0.9.7.ebuild 781 SHA256 38e8949bdde792320b68d8a666c7deac56224a45927d9a0e3ef3e79c5cdb0c38 SHA512 ff0761f0cb0a4cccb238e9f968d647bed185d926d4eb9b2a9872eb2a2aae66e86bc86123f7782a95b6132253e00dda0cb437b3bb4bc57aa3c6141f3066a2e23b WHIRLPOOL 7e736d335459fa5f0747e96ab0115e9a204d81ce68da6dfb616f504c37d31e29b1fd32878b4e69d91bbde7a2967c439af339e463092e57a9f6bade2b754d959a
 EBUILD slimv-0.9.8.ebuild 781 SHA256 e0afea7444defd03890779d38354772b17c5aaf331076749848feeb919fd5d92 SHA512 f76b3ee8c01ee5359b49be4633280dff4bafe8facb669e4305d784243570f9bcac0ee0377005b2b7ed6d789f4a387331a0b7d249d97ecbf58293d19ee56d6753 WHIRLPOOL 7eb5ab5dbed05e382b2ff5ed6404bf2567de233b040e6075d5c4c5a37aec8b90abd33aa1c0c24430d389db1d123330911951ccfe2450b784a7a0e9fc2f1bbc65
 EBUILD slimv-0.9.9.ebuild 781 SHA256 509c552d322daec77cb1c626f66abe182a9c1b8021d741ee51a50f54458fe66c SHA512 86692892aa1a7387b213c6625be247f04304d7170be8843cf2421b6b351b8e35ba04d1d35732077e2542135d7ef861c8ed7c4d7ca9dd5a0d0680a22c15869813 WHIRLPOOL 05738d6d294e1ff901eb724a3fddbb7dde4d7869a2c6d0720b8a03b5fba63dc937ccd6304e9e447c7395f7477a80974a1d0bfc2813e1b2ef86161ab6c325e33c
-MISC ChangeLog 2734 SHA256 02f46358ccd5eac70f95f6122c165ddaf7728fd6c902fea26b3b5808e03af4f9 SHA512 776b6d97ab750fbaa575fbfe90593047d201e58d8cf68ca2a6a9530f8ecacb11e324ac28d29d2e473cce4ca4194ca87a3605165b03f7fe4188f2d886ecc6ac2b WHIRLPOOL 8f77fdaec8bb15efc1a1a8f71004e7f4d349854f21dd847e21802ff7d104fe58e4b7ca144971ec4c80ecd971f484ce0ffa8a396977ad42c1aa7a5b27e2fbde2a
+MISC ChangeLog 2851 SHA256 068854695ff28dedc85550363e33d390230a18a38ebd46983599ef149d578869 SHA512 3ae52c14a4647d702f4da6686515b52ff02ccc3ad4f9ef50a60a558ea193f1d4fe5073854b22d4dc5075a665f2b002db8c398bfd276b8948a9d28614eaa94258 WHIRLPOOL 1e2bfce1964c9bb3ad83524afff7c37c0918e5796c2f3e97ab6afed1b2ddc9cbd2de5b7b4add4600c15cc6cb10bc75adc87383d76461c7c095c94ba570f0f9fd
 MISC metadata.xml 1046 SHA256 8130f680ac8c6592e6bea32883a922aa4cfc9af7b7cce208e74fff20e9b524c3 SHA512 5f5078c3b71745d8f985ee68d10de28a216db47ac8064965e4a945fecc78969f0817e938adb2e99632bcc686a2a019849153c0ea7fd87a9344d1d50bc36e566a WHIRLPOOL 775b2339c92e8c77093a9904066b77a5b245c5ba9ee445bb3d56a65f7f15df46fcee676921027ea6e3326433bedaef6bc430bc3c8f31d19509b999b886101d6d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRYUlqAAoJEEqz6FtPBkyjwUcIAKe7U32Ldin4cDzwEUyZspXg
-utakwgaWgtlFTLfOQJXkPE1fOgZQjqXcxI/HWgwQN/D8U6GwAS82mp22hmJo4v1j
-UcMZnZZCbAFYzVe71W3+I2DwEbV7QhweB6p9iGCUapXew2Pzl4B9r6CC4DTJhCFZ
-IZvbadGMpgokBbiSSI9dvz20vbz8UFXSESO7wgd2DhvHV2SPiJALHamJHsS28Zwy
-WinWHD3yj81SLkMPTk336DVWlsWt+t5B2Q1JnAjhT96MHOQsImJlnG0ySNFgtgru
-qd1tBf+xzVFtkhaqMLDsR9KegeJV6aahuNC13YcPkEEtpAYrty3Au0RwrrLi9Xk=
-=t06K
+iQEcBAEBCAAGBQJSL/krAAoJEEqz6FtPBkyjxcAH/35QtjTB26hCOwhhYOMiqSE8
+mxnFao2aGPBYQXy50niqsjZYmG1q/UYSGrlDTsalD6oaYaYbNQXdIQvzKLPJD/t2
+CoLLsp0OmSM86TKbkP6TuWUDt63rLV38AXobRSo6rlDLCo6/58eh0J81G7ll4JoT
+EKFwwqxj1KvWwIgz7vFf8tGXrkUTw9HBbeB1apB5QV4P/AmAcjHkONL38jJvkPhd
+tjNGyunGptJw9cDozU4jNAo+qDmbs/Y7nXJUZtkIoG84TkzgSYamZUFD8c/i1/s0
+u00XeHMBeeIyUcXM/hM79rn+UXgwN2gbHzM23FYZE2GvRb/VZC7jTP75tDp3JdM=
+=Ev1Y
 -----END PGP SIGNATURE-----
