@@ -1,0 +1,12 @@
+DEFINED_PHASES=install postinst postrm prepare unpack
+DEPEND=|| ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
+DESCRIPTION=vim plugin: aid Lisp development by providing a SLIME-like Lisp and Clojure REPL
+EAPI=5
+HOMEPAGE=http://www.vim.org/scripts/script.php?script_id=2531
+KEYWORDS=~amd64 ~x86
+LICENSE=public-domain
+RDEPEND=|| ( app-editors/vim[python] app-editors/gvim[python] ) >=dev-lang/python-2.4 || ( dev-lisp/clisp dev-lang/clojure dev-lisp/abcl dev-lisp/clozurecl dev-lisp/ecls dev-lisp/sbcl ) || ( >=app-editors/vim-7.3 >=app-editors/gvim-7.3 )
+SLOT=0
+SRC_URI=https://bitbucket.org/kovisoft/slimv/get/0.9.11.tar.bz2 -> slimv-0.9.11.tar.bz2
+_eclasses_=vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66	vim-doc	1c18baeec98cec3287524cbf2fee2bd2	vim-plugin	286547e90fbbc4c841eee80cd73e646c
+_md5_=5cc8a26f5cd18209d84b61975041a9f0
