@@ -4,10 +4,10 @@ DESCRIPTION=Open-source version of Google Chrome web browser
 EAPI=5
 HOMEPAGE=http://chromium.org/
 IUSE=bindist cups gnome gnome-keyring gps kerberos pulseaudio selinux system-sqlite tcmalloc custom-cflags +linguas_am +linguas_ar +linguas_bg +linguas_bn +linguas_ca +linguas_cs +linguas_da +linguas_de +linguas_el +linguas_en_GB +linguas_es +linguas_es_LA +linguas_et +linguas_fa +linguas_fi +linguas_fil +linguas_fr +linguas_gu +linguas_he +linguas_hi +linguas_hr +linguas_hu +linguas_id +linguas_it +linguas_ja +linguas_kn +linguas_ko +linguas_lt +linguas_lv +linguas_ml +linguas_mr +linguas_ms +linguas_nb +linguas_nl +linguas_pl +linguas_pt_BR +linguas_pt_PT +linguas_ro +linguas_ru +linguas_sk +linguas_sl +linguas_sr +linguas_sv +linguas_sw +linguas_ta +linguas_te +linguas_th +linguas_tr +linguas_uk +linguas_vi +linguas_zh_CN +linguas_zh_TW test
-KEYWORDS=amd64 ~arm x86
+KEYWORDS=amd64 -arm x86
 LICENSE=BSD
 RDEPEND=>=app-accessibility/speech-dispatcher-0.8:= app-arch/bzip2:= app-arch/snappy:= system-sqlite? ( dev-db/sqlite:3 ) cups? ( dev-libs/libgcrypt:= >=net-print/cups-1.3.11:= ) >=dev-lang/v8-3.19.17:= =dev-lang/v8-3.19* >=dev-libs/elfutils-0.149 dev-libs/expat:= >=dev-libs/icu-49.1.1-r1:= >=dev-libs/jsoncpp-0.5.0-r1:= >=dev-libs/libevent-1.4.13:= dev-libs/libxml2:=[icu] dev-libs/libxslt:= dev-libs/nspr:= >=dev-libs/nss-3.12.3:= dev-libs/protobuf:= dev-libs/re2:= gnome? ( >=gnome-base/gconf-2.24.0:= ) gnome-keyring? ( >=gnome-base/gnome-keyring-2.28.2:= ) gps? ( >=sci-geosciences/gpsd-3.7:=[shm] ) >=media-libs/alsa-lib-1.0.19:= media-libs/flac:= media-libs/harfbuzz:=[icu(+)] >=media-libs/libjpeg-turbo-1.2.0-r1:= media-libs/libpng:0= media-libs/libvpx:= >=media-libs/libwebp-0.2.0_rc1:= media-libs/opus:= media-libs/speex:= pulseaudio? ( media-sound/pulseaudio:= ) sys-apps/dbus:= sys-apps/pciutils:= sys-libs/zlib:=[minizip] virtual/udev virtual/libusb:1= x11-libs/gtk+:2= x11-libs/libXinerama:= x11-libs/libXScrnSaver:= x11-libs/libXtst:= kerberos? ( virtual/krb5 ) selinux? ( sec-policy/selinux-chromium ) !=www-client/chromium-9999 x11-misc/xdg-utils virtual/ttf-fonts
 SLOT=0
 SRC_URI=https://commondatastorage.googleapis.com/chromium-browser-official/chromium-29.0.1547.57-lite.tar.xz test? ( https://commondatastorage.googleapis.com/chromium-browser-official/chromium-29.0.1547.57-testdata.tar.xz )
 _eclasses_=chromium	cb805b418b1d27c585f6b2a3321d19ee	eutils	63afaaed8aa819fdcb814c7cd39495a2	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	2ff578fb151da221e1797f12e2990e72	gnome2-utils	cf14abfc65f26151fd2e33d722422ee3	linux-info	dd8fdcccc30f117673b4cba4ed4f74a7	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	pax-utils	2424f959506320f5196de8f79fa05297	portability	536c5e70c5fb252ed3b769e04aa3f05b	python-any-r1	815e8fef66b552e35e4a8cc95febd22e	python-utils-r1	d55ee5d992fc65859c29c73a24a24299	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=81c07d39cb67230011342df1a93fed36
+_md5_=3f8abfcd6cedf695401da107f382d9ad
