@@ -35,20 +35,20 @@ DIST chromium-31.0.1612.0-testdata.tar.xz 108847484 SHA256 c992e31d226f99eb5bca1
 DIST chromium-31.0.1612.0.tar.xz 163612784 SHA256 bc50d6bb7ff8357cb4eb48fa24e36ddec24713c232cd8bb0dfeb5fdb248a06a6 SHA512 280d9315025e888c31695c0268b182b1c699006635f7bfc48d7268898ee3c492661a68b74b1247d26f3846aa8bf1db03cb94ec3666888391f5a2d6834c026912 WHIRLPOOL 6551359986d48f73ed8dc919f804dac527af2a6241cc6e0da48169af177c72d0a37d43d186b917ee1750c2ff8d42dbf85786236e2142bce516d9283b33341d0a
 DIST chromium-31.0.1622.0-testdata.tar.xz 108881980 SHA256 3e231234be19ad8825f60981cb432e9c7966e98d59684235933d5c6a5a108002 SHA512 54c65053268e4eeac73267e49613e031c8b9187855c9071a1199a2ca2f092e190e716d2948290926fcf1642ef3c9df65a8773287a16268c179350516f3d0a099 WHIRLPOOL 295e8d10c527e192d694f738ea9ec53c6bc283ac19df03637046d9dd2377bc117a28e28382942fffe5b51a53c0d6ceb3b45b10199d5ac402f2b54a88ed72ba1d
 DIST chromium-31.0.1622.0.tar.xz 173148752 SHA256 6d119384603234b6f3f4ab15f2030bd58977b02c60dbfb57523f089ff2e56686 SHA512 2f596d10f9ab71fa29126f90c4960a0a5f32516d92e23d37fc771f14f769bff127cb3be70b60036e91ebf3d068314ad96ba3118eeba76b6ebbc60ca487bc86d9 WHIRLPOOL a6c53b2598606ae4469ae563025e6cdba591a057036781efbc95e4d4a74f8dc4d49563257aaeab3799b3c471b3535393493b9033dc85ae2360b92629969f7be1
-EBUILD chromium-29.0.1547.57.ebuild 17013 SHA256 81b965e2163ae7e3717ae4ef1a85f64ad5d438fedf1ceb5c40c5f86ea8e44b67 SHA512 044b3dd4151d0699df624e9115da67b9c2763852586538782af031e60d12e88df5bacfd57c6ea72f3021ac60b17d238e48780a1e1ec403e4f3906a07bbea4a82 WHIRLPOOL b2ea156efb5d458d323c34de006057b1cd260a7a3ba80e240a67650499ff139e34c256fd1a4cf9275eb82e42a2ae1db32625a0a1eef68955c54c4031b8d5e05e
-EBUILD chromium-29.0.1547.65.ebuild 16992 SHA256 f3ae1013c9b920b893168d6fe7c4f867c23e9f1a56dcd1dcef3de4b070811c63 SHA512 949b4b88ec3baa6073020a53453b1b76acb0130bad1c2251e2e40e300c03b08110a179a8908be7f53625703e8725edc5c6a9345dbff42b3b6899c722e31487de WHIRLPOOL 44728abe81f256754f265da32301003d427a25384f42093524cb5816ec71f6036fcd662d501f4d5b8a0b5748c8010e78cbe4f44954442ac158130311dfa7d3b6
+EBUILD chromium-29.0.1547.57.ebuild 17009 SHA256 5d20d17cc34665dc5096b51da4c542fda812294221fc1db4961b49bccaa2ff7b SHA512 9f2f18581409997ff0cd383dd9c574acb74873fba9e49314a9b841fb0b4e9cf3cdf4d0325611bc2024704bcf76c9390282e7ce6f1f5f20401bd62a0915c8bda9 WHIRLPOOL 398c215a8b8ac0fcb143ee15876bc27de2d6c607ebe8a9a7e46ffb6291f1de666c0d4fb394b68ca1e1e371c4441e6ad96cafd926e44274e0fa30d0c04d361e59
+EBUILD chromium-29.0.1547.65.ebuild 16988 SHA256 2ee70bc91ba3e139ac427dad623fcf99a6f082cbbb06b52426e5b0a55e673ea7 SHA512 90e5541540cc5dae858b91ec93ee93bb2368df12333d192c9b1e966000b54f4dd75cda5d32b9110e03243a21907435325a41be8fcd88bc4ded0ee6f7c30788b0 WHIRLPOOL c52e984bf5d5eaf12ddcaae023fc7570de8f7d672f662285516b14aa4c34d582bd2798165e998109e130886c6c33e83dfc41f750e77a7960bdcc2e87afa4dba6
 EBUILD chromium-30.0.1599.15.ebuild 17764 SHA256 fb6ab6673f206e64dc0a886711f22df49d73f8962f1f695c0b657a2f1ba1b9d5 SHA512 b8720cac2c9b868798e4cb252752e685a89d20bf1ba7c9158c0d170611c18166c5467478b7190add7b307870c57b1ee95d16e76a4ebdb0adbb24046e1b935a32 WHIRLPOOL 87e34b0084247d23fe0670677ad71de9066ddaf4bbe42c0dadb2136836c3f87d5a65f75ec07545b195e5a6155bfef0d9c165036fc5a30f209a27dd094e6cd187
 EBUILD chromium-30.0.1599.22.ebuild 17497 SHA256 523475c4db144e73081606c62e26a7e06539b7e21556a68b1ed47553a40447a0 SHA512 d90a488bc496590026bebf7bee2afa570dd81dedd9c6f49ee8ba154321fd1cca6cbfe01dca4f17754ee8036f49f38af6352c889d99502e6331f78666640d671b WHIRLPOOL 3559b1ce031f3108794aa87953925592544f962c212818d92f8264cf5ede83110441db9d23d0a3663b9301e5cadc9ac4fbdf5e58ada90f7fe8f02c51265dade7
 EBUILD chromium-31.0.1612.0.ebuild 17524 SHA256 7fe843618b794ab18af09c61acbbf36d489e85cbb7fb4b067c9471e53c00e541 SHA512 4154d0da00e939a9cc98253d6079f9c1122480ff7f3b929566205f400c19b9595bcc6205f438c6f1a2ef272e623a41e177615d64df71d2e0e490e0bc5244191b WHIRLPOOL 906e8760e3ef3a387463a6042617784ca209df80ea0e69b4b7d97f1afb5c2692b8d889a07314dfd2e91d4bdcf0a62a4ca63275ab58a1605617f75f341c17d75f
 EBUILD chromium-31.0.1622.0.ebuild 17550 SHA256 d2a8f20e23ed6779fedfa83bf463ba0d0e6d607b111cd61e0eac938d0246f751 SHA512 61d8bb8e59691755ea4b32527c2743c7b5d0066dd47f77534347657028592143154ae9dd8b1fa50f682e8d72c33216954cb50343c92b69e8e8c978b2fcb12de2 WHIRLPOOL 9687596c97da05bcc49a44e311292534fba3e0abf486fbfcd40a9f7cf93405c852e868a0ecccaa23dc1dcbbb7e123ab19bd3664c7aeda6eb4835aafb8faf2160
 EBUILD chromium-9999-r1.ebuild 19610 SHA256 89d5441c4aa2370c2bcaefec7e8e9f25b69c3c8ea7f45f2fe09a6f08787c71f5 SHA512 b0b728fb4146c108ab8cf8d0f584f1f7802766db78f1dae2165ff3c63528a7a657fe955dd81deaaad6603f1409f62d6862adc73a15cd8ae6026d97d30aad2f97 WHIRLPOOL fb648c058e6294b12e01d3033c7da4f6d47fc3f08388db1274e514e65ef848c528f1d423964bf555d484304149c384d396940a37901f931c49e18c0704679e3b
-MISC ChangeLog 81267 SHA256 48c811c3bcc93026e5bbeadb3b0965ec278de962ffdfb1ba08e343d42bf70eda SHA512 d39cdab78f999f54223ae53db97a2cd1bac1cc58310f9dd5ac9b4b3b48b7e55b45629618b902385af361ec45387fc4f68acccbca2eb8bc09a467a5bb2e941061 WHIRLPOOL 18530e17018f8d98e4b6a68fa7883495d86585ebac4826861ca38b2b806f57d77fc1a00f3aca8a476cd187d283b718a6a7a121fb2e45cf9634022d11ebe705f5
+MISC ChangeLog 81461 SHA256 217b440509d3fccdfe4be16ae88ca02b3794546b550a617cac2f10fdb9424e5a SHA512 33b8d2ac9cbaf5d03fb75f7ed0d16372682b8cee21d9008e1d55b7935b0849a6ec385eb7fae6912ba931d19d027f8c05230141eba5916018140d0b8e39a8bd1d WHIRLPOOL fcbb06138a69046abe3a2e24b11d75138fbfa65eb52c735de464b9894b6b599bd5edd4e64ab40e77c0df0d803114bf65ae8950963e4a4cab69a311aec7526a15
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 703 SHA256 ab48e17b94dc6a8e77b4ef786b60e1518ec079a6b79a733586ac4f39c316ea7e SHA512 4e96d1190cc6d3f1bba5dfcae6bd5699cf9710b8c4c75a1ce66974824cb4f86fe0917f81838c9fb254f0be064e07ce9060d4677938a3a819cff7d1b24e33df1f WHIRLPOOL 4705ddaaecaf5dfd1c611ceabb905991495105078afcacf71b6f389cd3a0649ce46f954ce600ab9e6f66f05d55b4727f856e6c469b0995c2457c8c3715eba8b8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlIvQo0ACgkQuUQtlDBCeQKPIgCfX6c9CiAaU11U0OO2867oxo3B
-OWEAnjY2qna5Yk0jNHXyQptM3yAjcp7J
-=TYSS
+iEYEAREIAAYFAlIwAV4ACgkQkKaRLQcq0GIdegCfdE+jeI4daHDkwEri3TdGcir5
+oJ8AniVa+7+7SRDwHpaue7weH92lY+1L
+=3a/g
 -----END PGP SIGNATURE-----
