@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/slimv
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/slimv/ChangeLog,v 1.21 2013/04/07 10:24:40 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/slimv/ChangeLog,v 1.22 2013/09/11 05:01:30 radhermit Exp $
+
+*slimv-0.9.11 (11 Sep 2013)
+
+  11 Sep 2013; Tim Harder <radhermit@gentoo.org> +slimv-0.9.11.ebuild:
+  Version bump.
 
 *slimv-0.9.10 (07 Apr 2013)
 
